# stm32_proto

./: Cargo.toml  README.md  rust-toolchain.toml
.cargo/: config.toml
