[package]
name = "stm32_proto"
version = "0.1.0"
edition = "2021"

[dependencies]
embassy-stm32 = { version = "0.1.0", features = [
    "defmt",
    "stm32f401cc",
    "unstable-pac",
    "memory-x",
    "time-driver-any",
    "exti",
    "chrono",
] }
embassy-executor = { version = "0.5.0", features = [
    "task-arena-size-32768",
    "arch-cortex-m",
    "executor-thread",
    "executor-interrupt",
    "defmt",
    "integrated-timers",
] }
embassy-time = { version = "0.3.0", features = [
    "defmt",
    "defmt-timestamp-uptime",
    "tick-hz-32_768",
] }
defmt = "0.3"
defmt-rtt = "0.4"
cortex-m = { version = "0.7.6", features = [
    "inline-asm",
    "critical-section-single-core",
] }
cortex-m-rt = "0.7.0"
panic-probe = { version = "0.3", features = ["print-defmt"] }
embassy-sync = "0.5.0"
embedded-graphics = { version = "0.8.1", features = ["defmt"] }
stm32f4xx-hal = { version = "0.20.0", features = ["stm32f401"] }
embedded-hal = "1.0.0"
sh1106 = "0.5.0"
heapless = "0.8.0"
shared-bus = { version = "0.3.1", features = ["cortex-m"] }
mpu6050 = "0.1.6"

[profile.release]
debug = 2
